--- a/css/header.css
+++ b/css/header.css
@@ -8,53 +8,40 @@ body{
     margin: 0;
     padding: 0;
 }
-.masthead {
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Cinzel');
+nav {
   background-color: #900055;
   background-image: linear-gradient(225deg, #900055 50%, #593271 100%);
     min-height: 150px;
-    position: relative;
 }
-.inner{
-    max-width: 860px;
-    min-height: 150px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.logo {
-    background-image: url("../images/logo.png");
-    float: left;
-    background-repeat: no-repeat;
-    background-size: 400px 100px;
-    display: block;
+
+  nav img {
     position: absolute;
-    bottom: 20px;
-    height: 120px;
-    width: 500px;
-    left: 150px;
+    width: 400px;
     bottom: 0;
-}
-@import url('https://fonts.googleapis.com/css?family=Cinzel');
-nav {
-    display: block;
-    position: absolute;
-    bottom:5px;
-    right: 40px;
-}
+    top: 20px;
+    left: 7%;
+  }
+
 nav ul {
     float: right;
     margin-right: 150px;
-    font-weight: 300;
-    font-size: 50px;
+    
   }
+
   nav ul li {
     display: inline-block;
-    line-height: 80px;
+    line-height: 210px;
     margin: 0 15px;
   }
   nav ul li a {
     font-family: 'Cinzel', bold;
     font-weight: 900;
     position: relative;
+    
     padding: 5px 0;
     color: #0ebac7;
     font-size: 30px;
@@ -66,7 +53,7 @@ nav ul {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 6px;
+    height: 5px;
     background: #0ebac7;
     
     transform: scaleX(0);
@@ -103,7 +90,8 @@ section
 {
     background-color: #380f4b;
     height: 500px;
-    display: block;
+    width: 100%;
+    display: inline-block;
     position: relative;
 }
 h1
