--- a/css/stylegrid.css
+++ b/css/stylegrid.css
@@ -3,7 +3,7 @@
     font-family: 'Gugi', cursive;}
     
     .main{
-     width: 75%; 
+     width: 1200px; 
      margin: auto;
      
      display: grid; color: white;
@@ -21,9 +21,10 @@
      }
      .hero{
       /* The image used */
-      background: linear-gradient(rgba(144,0,85,0.5),rgba(89,50,113,0.5),rgba(39,91,127,0.5)),url("../images/Ksh.jpg");
-      position: no-repeat center;
+      background: linear-gradient(rgba(144,0,85,0.5),rgba(89,50,113,0.5),rgba(39,91,127,0.5)), url("Ksh.jpg") no-repeat center;
       height: 600px;
+      width: 1200px;
+      position: relative;
 
       /* Create the parallax scrolling effect */
       background-attachment: fixed;
@@ -40,7 +41,7 @@
       
      }
      .v1{
-      background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("../images/Goonj.jpg");
+      background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("Goonj.jpg");
         
       width: 500px;
       height: 500px;
@@ -52,13 +53,15 @@
       }
   
       .text1{
-        width: 50%;
+        
         margin-left: 550px;
         margin-right: 50px;
         align-content: center;
+        
+        
         overflow: hidden;
         position: relative;
-        display: grid;
+        
         float: center;
       }
       @import url('https://fonts.googleapis.com/css?family=Cinzel');
@@ -75,11 +78,12 @@
       p{
         
         font-family: 'Caveat', bold;
-        font-size: 25px;
+        font-size: 1.8em;
+        position: relative;
         font-weight: 300;
         color: #ccdddf;
         text-align: center;
-        position: relative;
+        text-size-adjust: none;
         float: right;
         
       }
@@ -117,7 +121,7 @@
          
         }
         .divb{ 
-          background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("../images/Goonj.jpg");
+          background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("Goonj.jpg");
         
       
           background-size: cover;
@@ -165,7 +169,7 @@
       }
 
         .divc{ 
-          background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("../images/post2.jpg");
+          background: linear-gradient(rgba(91,137,149,0.5),rgba(167,52,94,0.5),rgba(109, 51, 93,0.5)),url("post2.jpg");
            background-size: cover;
            grid-row: 2/3;
            grid-column: 2/3;
@@ -294,7 +298,7 @@
       }
       
       .v2{
-        background: linear-gradient(rgba(91,137,149,0.7),rgba(167,52,94,0.5),rgba(109, 51, 93,0.7)),url("../images/band1.jpeg");
+        background: linear-gradient(rgba(91,137,149,0.7),rgba(167,52,94,0.5),rgba(109, 51, 93,0.7)),url("band1.jpeg");
           
         width: 600px;
         height: 400px;
