--- a/css/header1.css
+++ b/css/header1.css
@@ -1,100 +1,87 @@
 body{
-    background-color: #380f4b;
-    color: #eee1e1;
-    font-family: "proxima-nova","helvetica","arial","sans";
-    font-size: 15px;
-    font-weight: 300;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  background-color: #380f4b;
+  color: #eee1e1;
+  font-family: "proxima-nova","helvetica","arial","sans";
+  font-size: 15px;
+  font-weight: 300;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
-.masthead {
-  background-color: #900055;
-  background-image: linear-gradient(225deg, #900055 50%, #593271 100%);
-    min-height: 150px;
-    position: relative;
-}
-.inner{
-    max-width: 860px;
-    min-height: 150px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.logo {
-    background-image: url("../images/logo.png");
-    float: left;
-    background-repeat: no-repeat;
-    background-size: 400px 100px;
-    display: block;
-    position: absolute;
-    bottom: 20px;
-    height: 120px;
-    width: 500px;
-    left: 150px;
-    bottom: 0;
-}
+
+
+
 @import url('https://fonts.googleapis.com/css?family=Cinzel');
 nav {
-    display: block;
-    position: absolute;
-    bottom:5px;
-    right: 40px;
+background-color: #900055;
+background-image: linear-gradient(225deg, #900055 50%, #593271 100%);
+  min-height: 150px;
 }
+
+nav img {
+  position: absolute;
+  width: 400px;
+  bottom: 0;
+  top: 20px;
+  left: 7%;
+}
+
 nav ul {
-    float: right;
-    margin-right: 150px;
-    font-weight: 300;
-    font-size: 50px;
-  }
-  nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 15px;
-  }
-  nav ul li a {
-    font-family: 'Cinzel', bold;
-    font-weight: 900;
-    position: relative;
-    padding: 5px 0;
-    color: #0ebac7;
-    font-size: 30px;
-    text-transform: uppercase;
-  }
-  nav ul li a:before {
-    position: absolute;
-    content: "";
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 6px;
-    background: #0ebac7;
-    
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform 0.4s linear;
-  }
-  nav ul li a:hover:before {
-    transform: scaleX(1);
-    transform-origin: left;
-  }
-  nav ul ul {
-    position: absolute;
-    top: 60px;
-    line-height: 40px !important;
-    padding: 20px;
-    display: none;
-  }
-  nav ul li:hover > ul {
-    display: block;
-  }
-  nav ul ul li {
-    width: 100px;
-    float: none;
-    border: 1px solid grey;
-    border-radius: 15px;
-    display: list-item;
-    padding: 10px;
-    position: relative;
-    line-height: 20px !important;
-    background-color: dim gray;
-  }
+  float: right;
+  margin-right: 150px;
+  
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 210px;
+  margin: 0 15px;
+}
+nav ul li a {
+  font-family: 'Cinzel', bold;
+  font-weight: 900;
+  position: relative;
+  
+  padding: 5px 0;
+  color: #0ebac7;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+nav ul li a:before {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: #0ebac7;
+  
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s linear;
+}
+nav ul li a:hover:before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+nav ul ul {
+  position: absolute;
+  top: 60px;
+  line-height: 40px !important;
+  padding: 20px;
+  display: none;
+}
+nav ul li:hover > ul {
+  display: block;
+}
+nav ul ul li {
+  width: 100px;
+  float: none;
+  border: 1px solid grey;
+  border-radius: 15px;
+  display: list-item;
+  padding: 10px;
+  position: relative;
+  line-height: 20px !important;
+  background-color: dim gray;
+}
